Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52452

High DPI painting errors for widgets in scroll area if QT_SCALE_FACTOR is a point number > 1

XMLWordPrintable

    • a2157df28b8aaa0c6fc02a35a2b24fa82cb77230

      If a QT_SCALE_FACTOR point number is used (e.g. 1.25 or 1.5 - typical values on today's monitors with Windows 10), painting errors occur, if widgets are placed inside of a scroll area and the scrollbars are used to scroll the scroll area content.

      The attached application shows this issue. Start the application with the included StartHighDpiFixed_125.bat. Then scroll around and move the mouse over the widgets in the scroll area to see the painting issues.

        1. HighDpiScrollAreaIssue.png
          12 kB
          Uwe Kindler
        2. qtbug52452.png
          83 kB
          Qt Support
        3. qtbug52452.zip
          7 kB
          Friedemann Kleint
        4. ScrollAreaWidgets.zip
          8 kB
          Uwe Kindler
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            ukindler Uwe Kindler
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes