src/gui/painting/qbackingstore.cpp
@@ -230,11 +230,16 @@ QSize QBackingStore::size() const
 */
 bool QBackingStore::scroll(const QRegion &area, int dx, int dy)
 {
-    Q_UNUSED(area);
-    Q_UNUSED(dx);
-    Q_UNUSED(dy);
+    // Disable scrolling for non-integer scroll deltas. For this case
+    // the the existing rendered pixels can't be re-used, and we return
+    // false to signal that a repaint is needed.
+    const qreal nativeDx = QHighDpi::toNativePixels(qreal(dx), d_ptr->window);
+    const qreal nativeDy = QHighDpi::toNativePixels(qreal(dy), d_ptr->window);
+    if (qFloor(nativeDx) != nativeDx || qFloor(nativeDy) != nativeDy)
+        return false;
 
-    return d_ptr->platformBackingStore->scroll(QHighDpi::toNativeLocalRegion(area, d_ptr->window), QHighDpi::toNativePixels(dx, d_ptr->window), QHighDpi::toNativePixels(dy, d_ptr->window));
+    return d_ptr->platformBackingStore->scroll(QHighDpi::toNativeLocalRegion(area, d_ptr->window),
+                                               nativeDx, nativeDy);
 }
 
 /*!
